# ehr_ml

./: .gitignore  .mypy.ini  README.md  build.py  pyproject.toml  requirements.txt  test_patient.json
doc_src/source/: clmbr.rst  conf.py  setup.rst
docs/: .buildinfo  clmbr.html  featurizer.html  genindex.html  index.html  labeler.html  m-index.html  objects.inv  ontology.html  search.html  searchindex.js  setup.html  timeline.html  tutorial.html  utils.html
docs/_sources/: clmbr.rst.txt  index.rst.txt  setup.rst.txt  tutorial.rst.txt
ehr_ml/: convert_timeline_to_json.py  create_timelines.py  extract.py  featurizer.py  index.py  labeler.py  ontology.py  splits.py  subset.py  synpuf.py  timeline.py  utils.py
ehr_ml/clmbr/: __init__.py  dataset.py  doctorai_task.py  featurizer.py  labeler_task.py  lamb.py  opt.py  prediction_model.py  rnn_model.py  sequential_task.py  trainer.py  utils.py
ehr_ml/extension/: extract.pyi  index.pyi  ontology.pyi  patient2vec.pyi  subset.pyi  timeline.pyi
ehr_ml/patient2vec/: __init__.py  dataset.py  labeler_task.py  opt.py  prediction_model.py  rnn_model.py  sequential_task.py
native/: .bazelrc  BUILD  WORKSPACE  avro_utils.h  civil_day_caster.h  clean_optum.cpp  clean_starr.cpp  clmbr_extension.cpp  clmbr_extension.h  concept.h  constdb.cc  constdb.cpp  constdb.h  create_index.cpp  csv.h  extension.cpp  extract_extension.cpp  extract_omop.cpp  extract_optum.cpp  extract_starr.cpp  extract_subset_extension.cpp  featurize.cpp  flatmap.h  gem.h  index_extension.cpp  index_extension.h  lzma_utils.h  ontology_extension.cpp  ontology_extension.h  ontology_extract.cpp  ontology_omop.cpp  ontology_optum.cpp  ontology_starr.cpp  parse_utils.h  patient2vec_extension.cpp  patient2vec_extension.h  reader.h  rxnorm.h  rxnorm_test.cpp  sort_avro.cpp  (+7 more)
tests/: test_featurizer.py  test_labeler.py  test_utils.py
tutorial/: create_matrices.py  my_labeler.py  save_labeler.py  train_featurizers.py  train_model.py
