[tool.poetry]
name = "ehr_ml"
version = "0.1.0"
description = ""
authors = ["Ethan Steinberg <ethan.steinberg@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scipy = "^1.5.2"
torch="^1.6.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-future-import = "^0.4.6"
black = "^19.10b0"
isort = "^5.3.2"
mypy = "^0.782"
flake8 = "^3.8.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.black]
line_length = 80
target_version = ['py38']
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
patient2vec_train_model = 'ehr_ml.patient2vec:train_model'
patient2vec_debug_model = 'ehr_ml.patient2vec:debug_model'
inspect_timelines = 'ehr_ml.timeline:inspect_timelines'